// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Intro should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <IntroScreen
    isShowingTopBar={true}
    navBarIndex={0}
    onMomentumScrollEnd={[MockFunction]}
    onPressNext={[MockFunction]}
    onPressPrevious={[MockFunction]}
    onSetRef={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ScrollViewMock
          horizontal={true}
          onMomentumScrollEnd={[MockFunction]}
          pagingEnabled={true}
          scrollEnabled={false}
          showsHorizontalScrollIndicator={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <OnboardingScreenOne
            onPressNext={[MockFunction]}
            onPressPrevious={[MockFunction]}
          />
          <OnboardingScreenTwo
            onPressNext={[MockFunction]}
            onPressPrevious={[MockFunction]}
          />
          <OnboardingScreenThree
            onPressNext={[MockFunction]}
            onPressPrevious={[MockFunction]}
          />
          <OnboardingScreenFour
            onPressNext={[MockFunction]}
            onPressPrevious={[MockFunction]}
          />
          <OnboardingScreenFive
            onPressNext={[MockFunction]}
            onPressPrevious={[MockFunction]}
          />
        </ScrollViewMock>,
        <View
          style={
            Object {
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 40,
            }
          }
        >
          <TopBar
            type="demo"
          />
        </View>,
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 36,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="dark"
            hasWhiteBackground={true}
            labels={
              Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ]
            }
          />
        </View>,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <OnboardingScreenOne
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />,
            <OnboardingScreenTwo
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />,
            <OnboardingScreenThree
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />,
            <OnboardingScreenFour
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />,
            <OnboardingScreenFive
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />,
          ],
          "horizontal": true,
          "onMomentumScrollEnd": [MockFunction],
          "pagingEnabled": true,
          "scrollEnabled": false,
          "showsHorizontalScrollIndicator": false,
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": [MockFunction],
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPressNext": [MockFunction],
              "onPressPrevious": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPressNext": [MockFunction],
              "onPressPrevious": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPressNext": [MockFunction],
              "onPressPrevious": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPressNext": [MockFunction],
              "onPressPrevious": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPressNext": [MockFunction],
              "onPressPrevious": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [MockFunction],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TopBar
            type="demo"
          />,
          "style": Object {
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 40,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "type": "demo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="dark"
            hasWhiteBackground={true}
            labels={
              Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ]
            }
          />,
          "style": Object {
            "alignItems": "center",
            "bottom": 36,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "dark",
            "hasWhiteBackground": true,
            "labels": Array [
              Object {
                "name": "yucoin",
                "onPress": [Function],
              },
              Object {
                "name": "quests",
                "onPress": [Function],
              },
              Object {
                "name": "leaderboard",
                "onPress": [Function],
              },
              Object {
                "name": "rewards",
                "onPress": [Function],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ScrollViewMock
            horizontal={true}
            onMomentumScrollEnd={[MockFunction]}
            pagingEnabled={true}
            scrollEnabled={false}
            showsHorizontalScrollIndicator={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <OnboardingScreenOne
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />
            <OnboardingScreenTwo
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />
            <OnboardingScreenThree
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />
            <OnboardingScreenFour
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />
            <OnboardingScreenFive
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />
          </ScrollViewMock>,
          <View
            style={
              Object {
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 40,
              }
            }
          >
            <TopBar
              type="demo"
            />
          </View>,
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 36,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="dark"
              hasWhiteBackground={true}
              labels={
                Array [
                  Object {
                    "name": "yucoin",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "quests",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "leaderboard",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "rewards",
                    "onPress": [Function],
                  },
                ]
              }
            />
          </View>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <OnboardingScreenOne
                onPressNext={[MockFunction]}
                onPressPrevious={[MockFunction]}
              />,
              <OnboardingScreenTwo
                onPressNext={[MockFunction]}
                onPressPrevious={[MockFunction]}
              />,
              <OnboardingScreenThree
                onPressNext={[MockFunction]}
                onPressPrevious={[MockFunction]}
              />,
              <OnboardingScreenFour
                onPressNext={[MockFunction]}
                onPressPrevious={[MockFunction]}
              />,
              <OnboardingScreenFive
                onPressNext={[MockFunction]}
                onPressPrevious={[MockFunction]}
              />,
            ],
            "horizontal": true,
            "onMomentumScrollEnd": [MockFunction],
            "pagingEnabled": true,
            "scrollEnabled": false,
            "showsHorizontalScrollIndicator": false,
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": [MockFunction],
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onPressNext": [MockFunction],
                "onPressPrevious": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onPressNext": [MockFunction],
                "onPressPrevious": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onPressNext": [MockFunction],
                "onPressPrevious": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onPressNext": [MockFunction],
                "onPressPrevious": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onPressNext": [MockFunction],
                "onPressPrevious": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [MockFunction],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TopBar
              type="demo"
            />,
            "style": Object {
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 40,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "type": "demo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="dark"
              hasWhiteBackground={true}
              labels={
                Array [
                  Object {
                    "name": "yucoin",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "quests",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "leaderboard",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "rewards",
                    "onPress": [Function],
                  },
                ]
              }
            />,
            "style": Object {
              "alignItems": "center",
              "bottom": 36,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "dark",
              "hasWhiteBackground": true,
              "labels": Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Intro should render w/o topbar 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <IntroScreen
    isShowingTopBar={false}
    navBarIndex={0}
    onMomentumScrollEnd={[MockFunction]}
    onPressNext={[MockFunction]}
    onPressPrevious={[MockFunction]}
    onSetRef={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ScrollViewMock
          horizontal={true}
          onMomentumScrollEnd={[MockFunction]}
          pagingEnabled={true}
          scrollEnabled={false}
          showsHorizontalScrollIndicator={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <OnboardingScreenOne
            onPressNext={[MockFunction]}
            onPressPrevious={[MockFunction]}
          />
          <OnboardingScreenTwo
            onPressNext={[MockFunction]}
            onPressPrevious={[MockFunction]}
          />
          <OnboardingScreenThree
            onPressNext={[MockFunction]}
            onPressPrevious={[MockFunction]}
          />
          <OnboardingScreenFour
            onPressNext={[MockFunction]}
            onPressPrevious={[MockFunction]}
          />
          <OnboardingScreenFive
            onPressNext={[MockFunction]}
            onPressPrevious={[MockFunction]}
          />
        </ScrollViewMock>,
        null,
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 36,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="dark"
            hasWhiteBackground={true}
            labels={
              Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ]
            }
          />
        </View>,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <OnboardingScreenOne
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />,
            <OnboardingScreenTwo
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />,
            <OnboardingScreenThree
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />,
            <OnboardingScreenFour
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />,
            <OnboardingScreenFive
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />,
          ],
          "horizontal": true,
          "onMomentumScrollEnd": [MockFunction],
          "pagingEnabled": true,
          "scrollEnabled": false,
          "showsHorizontalScrollIndicator": false,
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": [MockFunction],
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPressNext": [MockFunction],
              "onPressPrevious": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPressNext": [MockFunction],
              "onPressPrevious": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPressNext": [MockFunction],
              "onPressPrevious": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPressNext": [MockFunction],
              "onPressPrevious": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPressNext": [MockFunction],
              "onPressPrevious": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [MockFunction],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="dark"
            hasWhiteBackground={true}
            labels={
              Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ]
            }
          />,
          "style": Object {
            "alignItems": "center",
            "bottom": 36,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "dark",
            "hasWhiteBackground": true,
            "labels": Array [
              Object {
                "name": "yucoin",
                "onPress": [Function],
              },
              Object {
                "name": "quests",
                "onPress": [Function],
              },
              Object {
                "name": "leaderboard",
                "onPress": [Function],
              },
              Object {
                "name": "rewards",
                "onPress": [Function],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ScrollViewMock
            horizontal={true}
            onMomentumScrollEnd={[MockFunction]}
            pagingEnabled={true}
            scrollEnabled={false}
            showsHorizontalScrollIndicator={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <OnboardingScreenOne
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />
            <OnboardingScreenTwo
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />
            <OnboardingScreenThree
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />
            <OnboardingScreenFour
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />
            <OnboardingScreenFive
              onPressNext={[MockFunction]}
              onPressPrevious={[MockFunction]}
            />
          </ScrollViewMock>,
          null,
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 36,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="dark"
              hasWhiteBackground={true}
              labels={
                Array [
                  Object {
                    "name": "yucoin",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "quests",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "leaderboard",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "rewards",
                    "onPress": [Function],
                  },
                ]
              }
            />
          </View>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <OnboardingScreenOne
                onPressNext={[MockFunction]}
                onPressPrevious={[MockFunction]}
              />,
              <OnboardingScreenTwo
                onPressNext={[MockFunction]}
                onPressPrevious={[MockFunction]}
              />,
              <OnboardingScreenThree
                onPressNext={[MockFunction]}
                onPressPrevious={[MockFunction]}
              />,
              <OnboardingScreenFour
                onPressNext={[MockFunction]}
                onPressPrevious={[MockFunction]}
              />,
              <OnboardingScreenFive
                onPressNext={[MockFunction]}
                onPressPrevious={[MockFunction]}
              />,
            ],
            "horizontal": true,
            "onMomentumScrollEnd": [MockFunction],
            "pagingEnabled": true,
            "scrollEnabled": false,
            "showsHorizontalScrollIndicator": false,
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": [MockFunction],
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onPressNext": [MockFunction],
                "onPressPrevious": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onPressNext": [MockFunction],
                "onPressPrevious": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onPressNext": [MockFunction],
                "onPressPrevious": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onPressNext": [MockFunction],
                "onPressPrevious": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onPressNext": [MockFunction],
                "onPressPrevious": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [MockFunction],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="dark"
              hasWhiteBackground={true}
              labels={
                Array [
                  Object {
                    "name": "yucoin",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "quests",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "leaderboard",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "rewards",
                    "onPress": [Function],
                  },
                ]
              }
            />,
            "style": Object {
              "alignItems": "center",
              "bottom": 36,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "dark",
              "hasWhiteBackground": true,
              "labels": Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
